VA-739 Fix missing scrollbar on overflow

--- a/src/styles/endscreen.css
+++ b/src/styles/endscreen.css
@@ -6,8 +6,7 @@
   -webkit-text-size-adjust: none;
 }
 
-.h5p-interactive-video.mobile .h5p-interactive-video-endscreen,
-.h5p-interactive-video.h5p-minimal .h5p-interactive-video-endscreen {
+.h5p-interactive-video .h5p-interactive-video-endscreen {
   overflow-y: auto;
 }
 
